BuildHughes/translation-tool/inputs/source_meta/objects/REQ_RES__c.object
<CustomObject>
    <fields>
        <fullName>Account_CNPJ__c</fullName>
        <label>Account CNPJ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_CPF__c</fullName>
        <label>Account CPF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact_Email__c</fullName>
        <label>Account Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact_FirstName__c</fullName>
        <label>Account Contact FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact_IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Contact IsPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Contact_LastName__c</fullName>
        <label>Account Contact LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact_Phone__c</fullName>
        <label>Account Contact Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact_SMS_Phone__c</fullName>
        <label>Account Contact SMS Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <label>Account Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <label>Account Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SAN__c</fullName>
        <label>Account SAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Since__c</fullName>
        <label>Account Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anytime_Bytes_Available__c</fullName>
        <label>Anytime Bytes Available (GB/Month)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anytime_Bytes_Total__c</fullName>
        <label>Anytime Bytes Total(GB/Month)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_10_Amt__c</fullName>
        <label>Bill_10_Amt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_10_BillNumber__c</fullName>
        <label>Bill_10_BillNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_10_EndDate__c</fullName>
        <label>Bill_10_EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_10_Status__c</fullName>
        <label>Bill_10_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_10_StrtDate__c</fullName>
        <label>Bill_10_StrtDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_10_URL__c</fullName>
        <label>Bill_10_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_11_Amt__c</fullName>
        <label>Bill_11_Amt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_11_BillNumber__c</fullName>
        <label>Bill_11_BillNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_11_EndDate__c</fullName>
        <label>Bill_11_EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_11_Status__c</fullName>
        <label>Bill_11_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_11_StrtDate__c</fullName>
        <label>Bill_11_StrtDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_11_URL__c</fullName>
        <label>Bill_11_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_12_Amt__c</fullName>
        <label>Bill_12_Amt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_12_BillNumber__c</fullName>
        <label>Bill_12_BillNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_12_EndDate__c</fullName>
        <label>Bill_12_EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_12_Status__c</fullName>
        <label>Bill_12_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_12_StrtDate__c</fullName>
        <label>Bill_12_StrtDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_12_URL__c</fullName>
        <label>Bill_12_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Count__c</fullName>
        <label>Bill Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Status__c</fullName>
        <label>Billing Account Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Balance__c</fullName>
        <label>Billing Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle_End__c</fullName>
        <label>Billing Cycle End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle_Start__c</fullName>
        <label>Billing Cycle Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Delinquency_Status__c</fullName>
        <label>Billing Delinquency Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Duedate__c</fullName>
        <label>Billing Duedate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Payment_Type__c</fullName>
        <label>Billing Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Bytes_Available__c</fullName>
        <label>Bonus Bytes Available (GB/Month)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Bytes_Total__c</fullName>
        <label>Bonus Bytes Total (GB/Month)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Id</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>REQ_RES</relationshipLabel>
        <relationshipName>REQ_RES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>REQ_RES</relationshipLabel>
        <relationshipName>REQ_RES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Order</label>
        <referenceTo>Location_Order__c</referenceTo>
        <relationshipLabel>REQ_RES</relationshipLabel>
        <relationshipName>REQ_RES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Offers__c</referenceTo>
        <relationshipLabel>REQ_RES</relationshipLabel>
        <relationshipName>REQ_RES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Protocol_Id__c</fullName>
        <label>Protocol Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refill_Day_Of_Month__c</fullName>
        <label>Refill Day Of Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Message__c</fullName>
        <label>Request Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Description__c</fullName>
        <label>Response Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <label>Response Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Token_Bandwidth__c</fullName>
        <label>Token Bandwidth (GB)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <label>Unique_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>REQ_RES</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unique_Id__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R{000000000}</displayFormat>
        <label>REQ_RES Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REQ_RES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>